2011-02-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/dll/: example of loading from a shared
	library or DLL (thin wrapper around ACE_DLL).

	* src/libYARP_OS/include/yarp/os/SharedLibrary.h: prep
	work for loading carriers/devices dynamically.

2011-02-01  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* conf/YarpDoc.cmake: YARP documentation should now always 
	be verbose, rather than sometimes filtered as it has
	been for legacy reasons [thanks Lorenzo Natale]

2011-02-01  Ugo Pattacini - Carlo Ciliberto <ugo.pattacini@iit.it>, <carlo.ciliberto@iit.it>

	* yarpview: fixed timing statistics

2011-01-28  Ugo Pattacini <ugo.pattacini@iit.it>

	* src/libYARP_dev/include/yarp/dev/CartesianControl.h: added setTaskVelocities(.) method

2011-01-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpDoc.cmake: fix generation of verbose documentation
	[thanks Giorgio Metta]

2011-01-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/CMakeLists.txt: install missing .inl
	file [thanks Lorenzo Natale]

2011-01-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/template/YARPConfigVersion.cmake.in: add version 
	information for side-by-side YARP installs.

	* conf/YarpDescribe.cmake: add version information to
	YARPConfig.cmake [thanks Lorenzo Natale]

	* example/swig/yarp.i: add a wrapper for 
	IPositionControl::checkMotionDone, and define a "BVector"
	class to wrap the C "bool *" types.  [thanks Varun Kompella]

2011-01-22  Paul Fitzpatrick  <paulfitz@sigmund>

	* conf/YarpWdk.cmake: experiment - set up build files for 
	using Windows Driver Kit to compile YARP library and
	executable.

2011-01-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/FindACE.cmake: integrate paths to old ACE4YARP, support
	dropped accidentally [thanks Jonas Ruesch]

2011-01-09  Arjan Gijsberts  <arjan@liralab.it>

	* example/swig/yarp.i: removal of temporary test line.

2011-01-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
