@@ -5,6 +5,7 @@
 # Let's see what we built, and record it to facilitate in-tree 
 # ("uninstalled") use of YARP.
 get_property(YARP_INCLUDE_DIRS GLOBAL PROPERTY YARP_TREE_INCLUDE_DIRS)
+get_property(YARP_LINK_DIRS GLOBAL PROPERTY YARP_TREE_LINK_DIRS)
 get_property(YARP_LIBRARIES GLOBAL PROPERTY YARP_LIBS)
 # Oops, cannot use YARP_DEFINES name, conflicts with an old variable
 # that might be lurking in CMakeCache.txt as people upgrade.  Insert 
