@@ -7,6 +7,7 @@ IF (NOT YARP_FOUND)
   # Give the details of YARP libraries, include path etc.
   SET(YARP_LIBRARIES "@YARP_LIBRARIES@")
   SET(YARP_INCLUDE_DIRS "@YARP_INCLUDE_DIRS@")
+  SET(YARP_LINK_DIRS "@YARP_LINK_DIRS@") # only needed with certain plugins
   SET(YARP_DEFINES "@YARP_ALL_DEFINES@") # only needed if you use ACE directly
   SET(YARP_MODULE_PATH "@YARP_MODULE_PATH@")
 
@@ -33,6 +34,7 @@ IF (NOT YARP_FOUND)
     MESSAGE(STATUS "  LINK_LIBRARIES(\${YARP_LIBRARIES})")
     MESSAGE(STATUS "  INCLUDE_DIRECTORIES(\${YARP_INCLUDE_DIRS})")
     LINK_LIBRARIES(${YARP_LIBRARIES})
+    LINK_DIRECTORIES(${YARP_LINK_DIRS})
     INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS})
     ADD_DEFINITIONS(${YARP_DEFINES})
     SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH};${YARP_MODULE_PATH})
